# v2-documents-managment-project

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/users/: forms.py  models.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_profile_profile_photo.py
backend/users/templates/registration/: login.html
backend/users/templates/users/: profile.html  users_home.html
backend/website/: urls.py  views.py
backend/website/templates/website/: base.html  home.html
