[tool.poetry]
name = "v2-documents-managment-project"
version = "0.1.0"
description = "All in one documents managment solution"
authors = ["Edmon Sebit <edmontheprogrammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
devtool = "^0.0.2"
psycopg2 = "^2.9.9"
django-debug-toolbar = "^4.4.2"
crispy-tailwind = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
